pay API 에러 핸들링 - 존재하지 않는 유저, 잔액 부족, 세션정보 없음

--- a/views/transfer/index.ejs
+++ b/views/transfer/index.ejs
@@ -9,6 +9,7 @@
 <form action="/users/logout" method="get">
     <input type="submit" value="로그아웃">
 </form>
+<h1><%= msg %></h1>
 <%- include new.ejs %>
 잔액 : <%= user_info.balance %>
 <%- include history.ejs %>
