--- a/views/transfer/history.ejs
+++ b/views/transfer/history.ejs
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 </head>
 <body>
 <h1>송금 내역</h1><a href="/transfer">송금하러 가기</a>
 <hr>
 <!-- TODO: pagination -->
-<a href="/transfer/history">전체</a>
-<a href="/transfer/history?tab=receive">입금</a>
-<a href="/transfer/history?tab=sent">출금</a>
-<a href="/transfer/history?tab=test">모든 유저의 내역 보기(테스트용)</a>
+<ul class="nav nav-tabs">
+    <li class="nav-item" id="all">
+        <a href="/transfer/history?tab=all">전체</a>
+    </li>
+    <li class="nav-item" id="received">
+        <a href="/transfer/history?tab=received">입금</a>
+    </li>
+    <li class="nav-item" id="sent">
+        <a href="/transfer/history?tab=sent">출금</a>
+    </li>
+    <li class="nav-item" id="test">
+        <a href="/transfer/history?tab=test">모든 유저의 내역 보기(테스트용)</a>
+    </li>
+</ul>
+<br>
 <table style="border: solid black 1px; margin-bottom:30px;">
     <tr>
         <td>id</td>
@@ -40,5 +52,47 @@
         </tr>
     <% } %>
 </table>
+<!-- paginator -->
+<% var pages = Math.ceil(count/10); %>
+<ul class="pagination">
+    <% for(var i=1;i<=pages;i++){ %>
+    <li class="page-item" id="page<%=i%>">
+        <a class="page-link" href="/transfer/history?tab=<%= tab %>&page=<%= i %>"><%= i %></a>
+    </li>
+    <% } %>
+</ul>
+<!-- paginator end -->
 </body>
+<script>
+    function getParameterByName(name, url) {
+        name = name.replace(/[\[\]]/g, "\\$&");
+        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+            results = regex.exec(url);
+        return results[2];
+    }
+
+    function activeTabs() {
+
+        var url = window.location.href;
+        var tabName = 'all';
+        var pageNumber = 1;
+
+        if(url.includes('tab')){
+            tabName  = getParameterByName("tab", url);
+        }
+        if(url.includes('page')){
+            pageNumber  = getParameterByName("page", url);
+        }
+
+        if(tabName){
+            var tab = document.getElementById(tabName);
+            tab.classList.add("active");
+        }
+        if(pageNumber){
+            var page = document.getElementById('page' + pageNumber);
+            page.classList.add("active");
+        }
+    }
+    activeTabs();
+</script>
 </html>
