--- a/views/transfer/index.ejs
+++ b/views/transfer/index.ejs
@@ -14,7 +14,7 @@
 잔액 : <%= user_info.balance %>
 <br>
 <h5>입출금내역</h5>
-<a href="/transfer/history?tab=all">전체</a>
+<a href="/transfer/history">전체</a>
 <a href="/transfer/history?tab=received">입금</a>
 <a href="/transfer/history?tab=sent">출금</a>
 <a href="/transfer/history?tab=test">모든 유저의 내역 보기(테스트용)</a>
