--- a/views/transfer/new.ejs
+++ b/views/transfer/new.ejs
@@ -1,7 +1,14 @@
 <form action="/transfer/pay" method="post">
-    <!--    <input type="text" name="userEmail">에게-->
-    <!--    <input type="text" name="amount">transfer-->
-    <input type="text" name="userEmail" value="b@b.com">에게
-    <input type="text" name="amount" value="10">point
-    <input type="submit" value="송금하기">
+    <div class="form-group">
+        <input type="email" value="b@b.com" name="userEmail" class="form-control" aria-describedby="emailHelp" placeholder="상대방의 이메일 주소를 입력하세요.">
+        <input type="number" value="10" name="amount" class="form-control" placeholder="보낼 금액을 입력하세요.">
+    </div>
+    <button type="submit" class="btn btn-primary">송금하기</button>
 </form>
+<!--<form action="/transfer/pay" method="post">-->
+<!--    <div class="form-group">-->
+<!--        <input type="email" name="userEmail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="상대방의 이메일 주소를 입력하세요.">-->
+<!--        <input type="number" name="amount" class="form-control" placeholder="보낼 금액을 입력하세요.">-->
+<!--    </div>-->
+<!--    <button type="submit" class="btn btn-primary">송금하기</button>-->
+<!--</form>-->
