--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -35,7 +35,7 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" name="password" class="form-control" id="password_input" placeholder="Password">
         </div>
-        <%= msg %>
+        <%= msg %><br>
         <a href="/users/sign_up" class="btn btn-success">회원가입</a>
         <button type="button" id="submit_form_btn" class="btn btn-primary">로그인</button>
     </form>
