users 관련 코드 개선, 회원가입 form 유효성을 통과하지 못해도 submit되는 버그 수정

--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -33,7 +33,7 @@
         </div>
         <input id="find_recommended_user" class="btn btn-success" type="button" value="추천인 확인">
         <input id="check_duplicated_user" class="btn btn-success" type="button" value="아이디 중복확인">
-        <button id="submit_form_btn" type="submit" class="btn btn-primary">가입하기</button>
+        <button id="submit_form_btn" type="button" class="btn btn-primary">가입하기</button>
     </form>
 </div>
 
