--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,10 +6,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 </head>
 <body>
-<div style="background-color: #ffcccc;">
-    <div style="padding:10px;">
-        <form action="/users/logout" method="get">
-            <%= session.email %>님 환영합니다.<input type="submit" style="margin-left:30px;" class="btn btn-light" value="로그아웃">
-        </form>
+<% if(session.email){ %>
+    <div style="background-color: #ffcccc;">
+        <div style="padding:10px;">
+            <form action="/users/logout" method="get">
+                <%= session.email %>님 환영합니다.<input type="submit" style="margin-left:30px;" class="btn btn-light" value="로그아웃">
+            </form>
+        </div>
     </div>
-</div>
+    <div style="margin:10px;">
+        <a href="/transfer" class="btn btn-info">송금하러 가기</a>
+        <a href="/transfer/history" class="btn btn-success">입출금내역 보러가기</a>
+    </div>
+<% } %>
