--- a/views/transfer/new.ejs
+++ b/views/transfer/new.ejs
@@ -1,14 +1,10 @@
 <form action="/transfer/pay" method="post">
     <div class="form-group">
-        <input type="email" value="b@b.com" name="userEmail" class="form-control" aria-describedby="emailHelp" placeholder="상대방의 이메일 주소를 입력하세요.">
-        <input type="number" value="10" name="amount" class="form-control" placeholder="보낼 금액을 입력하세요.">
+        <input type="email" value="b@b.com" id="user_email" class="form-control" aria-describedby="emailHelp" placeholder="상대방의 이메일 주소를 입력하세요.">
+        <input type="number" value="10" id="amount" class="form-control" placeholder="보낼 금액을 입력하세요.">
     </div>
-    <button type="submit" class="btn btn-primary">송금하기</button>
+    <div id="msg_div"></div>
+    <div id="btn_div">
+        <button id="pay_btn" type="button" class="btn btn-primary">송금하기</button>
+    </div>
 </form>
-<!--<form action="/transfer/pay" method="post">-->
-<!--    <div class="form-group">-->
-<!--        <input type="email" name="userEmail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="상대방의 이메일 주소를 입력하세요.">-->
-<!--        <input type="number" name="amount" class="form-control" placeholder="보낼 금액을 입력하세요.">-->
-<!--    </div>-->
-<!--    <button type="submit" class="btn btn-primary">송금하기</button>-->
-<!--</form>-->
