--- a/views/transfer/new.ejs
+++ b/views/transfer/new.ejs
@@ -5,6 +5,7 @@
     </div>
     <div id="msg_div"></div>
     <div id="btn_div">
+        <img id="spinner" style="height: 33px; display: none;" src="/images/spinner.gif">
         <button id="pay_btn" type="button" class="btn btn-primary">송금하기</button>
     </div>
 </form>
