--- a/views/transfer/history.ejs
+++ b/views/transfer/history.ejs
@@ -28,27 +28,33 @@
             </tr>
         </thead>
         <tbody>
-        <% for(let history of histories) { %>
+        <% if(histories.length == 0){ %>
             <tr>
-                <td><%= history.id %></td>
-                <td><%= history.sentUserEmail %></td>
-                <td><%= history.receivedUserEmail %></td>
-                <% if(history.amount < 0){ %>
-                    <td><%= history.amount*-1 %></td>
-                <% } else { %>
-                    <td><%= history.amount %></td>
-                <% }%>
-                <% if(history.type == 1){ %>
-                    <td>거래</td>
-                <% } else if(history.type == 2){ %>
-                    <td>가입기념 포인트 지급</td>
-                <% } else if(history.type == 3){ %>
-                    <td>추천인 포인트 지급</td>
-                <% } else { %>
-                    <td>테스트용 포인트 지급</td>
-                <% } %>
-                <td><%= history.createdAt.toLocaleString() %></td>
+                <td colspan="6" class="text-center">데이터가 없습니다.</td>
             </tr>
+        <% } else {%>
+            <% for(let history of histories) { %>
+                <tr>
+                    <td><%= history.id %></td>
+                    <td><%= history.sentUserEmail %></td>
+                    <td><%= history.receivedUserEmail %></td>
+                    <% if(history.amount < 0){ %>
+                        <td><%= history.amount*-1 %></td>
+                    <% } else { %>
+                        <td><%= history.amount %></td>
+                    <% }%>
+                    <% if(history.type == 1){ %>
+                        <td>거래</td>
+                    <% } else if(history.type == 2){ %>
+                        <td>가입기념 포인트 지급</td>
+                    <% } else if(history.type == 3){ %>
+                        <td>추천인 포인트 지급</td>
+                    <% } else { %>
+                        <td>테스트용 포인트 지급</td>
+                    <% } %>
+                    <td><%= history.createdAt.toLocaleString() %></td>
+                </tr>
+            <% } %>
         <% } %>
         </tbody>
     </table>
