테스트를 위해 입력해둔 form value 삭제

--- a/views/transfer/new.ejs
+++ b/views/transfer/new.ejs
@@ -1,7 +1,7 @@
 <form action="/transfer/pay" method="post">
     <div class="form-group">
-        <input type="email" value="b@b.com" id="user_email" class="form-control" aria-describedby="emailHelp" placeholder="상대방의 이메일 주소를 입력하세요.">
-        <input type="number" value="10" id="amount" class="form-control" placeholder="보낼 금액을 입력하세요.">
+        <input type="email" id="user_email" class="form-control" aria-describedby="emailHelp" placeholder="상대방의 이메일 주소를 입력하세요.">
+        <input type="number" id="amount" class="form-control" placeholder="보낼 금액을 입력하세요.">
     </div>
     <div id="msg_div"></div>
     <div id="btn_div">
