--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -29,7 +29,7 @@
     <form action="/users/login" method="post" id="login_form">
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input type="email" name="userEmail" value="a@a.com" class="form-control" id="email_input" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" name="userEmail" class="form-control" id="email_input" aria-describedby="emailHelp" placeholder="Enter email">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
